--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+Translation-Revision-Date: 2015-12-09 15:44:37+0000
+Plural-Forms: nplurals=2; plural=n != 1;
+Generator: GlotPress/2.4.0-alpha
+Language: el_GR
+-->
 <resources>
+	<string name="and">και</string>
+	<string name="multiple_speakers">και %d άλλοι.</string>
 	<string name="feedback_url_not_available_toast">Αυτό το WordCamp δεν έχει δημοσιεύσει διεύθυνση URL για σχόλια ακόμη</string>
 	<string name="action_wc_feedback">Σχόλια WordCamp</string>
 	<string name="add_to_calendar">Προσθήκη στο ημερολόγιο</string>
@@ -13,8 +21,8 @@
 	<string name="upcoming_wc_title">επερχόμενο</string>
 	<string name="action_webversion">Web έκδοση</string>
 	<string name="title_overview">Επισκόπηση</string>
-	<string name="action_send">Αποστολή</string>
 	<string name="title_schedule">Πρόγραμμα</string>
+	<string name="action_send">Αποστολή</string>
 	<string name="my_sessions_title">Οι συνεδρίες μου</string>
 	<string name="title_speakers">Ομιλητές</string>
 	<string name="title_sessions">Συνεδρίες</string>
@@ -23,14 +31,14 @@
 	<string name="hint_description">Περιγραφή</string>
 	<string name="bug">Αναφορά Σφάλματος;</string>
 	<string name="update_sessions_toast">Ενημερώθηκαν οι συνεδρίες</string>
-	<string name="speaker_to_be_announced">Οι ομιλιτές θα ανακοινωθούν</string>
-	<string name="schedule_to_be_announced">Το πρόγραμμα θα ανακοινωθεί</string>
 	<string name="help_and_feedback">Σχόλια</string>
+	<string name="schedule_to_be_announced">Το πρόγραμμα θα ανακοινωθεί</string>
+	<string name="speaker_to_be_announced">Οι ομιλιτές θα ανακοινωθούν</string>
 	<string name="empty_mywordcamps">Δεν προστέθηκαν WordCamps ακόμα</string>
 	<string name="search_wc_hint">Αναζήτηση WordCamps</string>
-	<string name="wc_about">Σχετικά</string>
-	<string name="wc_location">Τοποθεσία</string>
 	<string name="update_overview_toast">Ενημερώθηκε η επισκόπηση</string>
+	<string name="wc_location">Τοποθεσία</string>
+	<string name="wc_about">Σχετικά</string>
 	<string name="empty_mysessions">Καμία Συνεδρία ως αγαπημένο</string>
 	<string name="update_speakers_toast">Ανανεώθηκαν οι Ομιλιτές</string>
 	<string name="action_search">Αναζήτηση WordCamps</string>
