--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-Translation-Revision-Date: 2015-10-18 01:57:56+0000
+Translation-Revision-Date: 2015-11-01 01:29:09+0000
 Plural-Forms: nplurals=2; plural=n != 1;
 Generator: GlotPress/2.4.0-alpha
-Language: en_AU
+Language: en_GB
 -->
 <resources>
 	<string name="and">and</string>
