--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+Translation-Revision-Date: 2015-12-05 04:34:00+0000
+Plural-Forms: nplurals=1; plural=0;
+Generator: GlotPress/2.4.0-alpha
+Language: ja_JP
+-->
 <resources>
-	<string name="action_wc_feedback">WordCamp のフィードバック</string>
+	<string name="and">と</string>
+	<string name="multiple_speakers">と他 %d 人</string>
 	<string name="feedback_url_not_available_toast">この WordCamp はまだフィードバック URL を公開していません</string>
+	<string name="action_wc_feedback">WordCamp のフィードバック</string>
 	<string name="add_to_calendar">カレンダーに追加</string>
 	<string name="about_description_fallback">サイトで詳細をチェック</string>
 	<string name="wc_date">日付</string>
-	<string name="visit_website">ウェブサイトを見る</string>
 	<string name="action_navigate">ナビゲート</string>
+	<string name="visit_website">ウェブサイトを見る</string>
 	<string name="my_wc_title">お気に入り</string>
 	<string name="no_network_toast">ネットワークが利用できません</string>
 	<string name="empty_wordcamps">WordCamp はまだ同期されていません</string>
@@ -15,24 +23,24 @@
 	<string name="title_overview">概要</string>
 	<string name="title_schedule">スケジュール</string>
 	<string name="action_send">送信</string>
-	<string name="title_speakers">スピーカー</string>
 	<string name="my_sessions_title">自分のセッション</string>
+	<string name="title_speakers">スピーカー</string>
 	<string name="title_sessions">セッション</string>
 	<string name="action_feedback">フィードバック</string>
 	<string name="hint_title">タイトル</string>
 	<string name="hint_description">説明</string>
 	<string name="bug">バグを報告しますか？</string>
-	<string name="wc_about">About</string>
-	<string name="update_speakers_toast">スピーカーを更新しました</string>
-	<string name="schedule_to_be_announced">告知するスケジュール</string>
 	<string name="update_sessions_toast">セッションを更新しました</string>
-	<string name="update_overview_toast">概要を更新しました</string>
 	<string name="help_and_feedback">フィードバック</string>
+	<string name="schedule_to_be_announced">告知するスケジュール</string>
 	<string name="speaker_to_be_announced">スピーカーはこれから告知されます</string>
-	<string name="empty_mysessions">お気に入りのセッションがありません</string>
 	<string name="empty_mywordcamps">まだ WordCamp が追加されていません</string>
 	<string name="search_wc_hint">WordCamp を検索</string>
+	<string name="update_overview_toast">概要を更新しました</string>
 	<string name="wc_location">場所</string>
+	<string name="wc_about">About</string>
+	<string name="empty_mysessions">お気に入りのセッションがありません</string>
+	<string name="update_speakers_toast">スピーカーを更新しました</string>
 	<string name="action_search">WordCamp を検索</string>
 	<string name="action_refresh">更新</string>
 </resources>
