--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,40 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+Translation-Revision-Date: 2015-11-20 15:35:23+0000
+Plural-Forms: nplurals=2; plural=n != 1;
+Generator: GlotPress/2.4.0-alpha
+Language: nl
+-->
 <resources>
-	<string name="multiple_speakers">en %d anderen</string>
 	<string name="and">en</string>
-	<string name="action_wc_feedback">WordCamp Feedback</string>
+	<string name="multiple_speakers">en %d anderen</string>
 	<string name="feedback_url_not_available_toast">Deze WordCamp heeft nog geen feedback URL gepubliceerd</string>
-	<string name="about_description_fallback">Bekijk de website voor meer informatie</string>
+	<string name="action_wc_feedback">WordCamp Feedback</string>
 	<string name="add_to_calendar">Toevoegen aan kalender</string>
-	<string name="visit_website">Bezoek website</string>
-	<string name="action_navigate">Navigatie</string>
+	<string name="about_description_fallback">Bekijk de website voor meer informatie</string>
 	<string name="wc_date">Datum</string>
+	<string name="action_navigate">Navigatie</string>
+	<string name="visit_website">Bezoek website</string>
 	<string name="my_wc_title">Favorieten</string>
 	<string name="no_network_toast">Geen netwerk beschikbaar</string>
 	<string name="empty_wordcamps">WordCamps nog niet gesynchroniseerd</string>
-	<string name="title_sessions">Sessies</string>
-	<string name="title_speakers">Sprekers</string>
-	<string name="my_sessions_title">Mijn Sessies</string>
-	<string name="action_send">Verstuur</string>
-	<string name="title_overview">Overzicht</string>
-	<string name="action_webversion">Web versie</string>
 	<string name="upcoming_wc_title">In de toekomst</string>
+	<string name="action_webversion">Web versie</string>
+	<string name="title_overview">Overzicht</string>
 	<string name="title_schedule">Tijdschema</string>
-	<string name="bug">Rapporteer een bug</string>
-	<string name="hint_title">Titel</string>
+	<string name="action_send">Verstuur</string>
+	<string name="my_sessions_title">Mijn Sessies</string>
+	<string name="title_speakers">Sprekers</string>
+	<string name="title_sessions">Sessies</string>
 	<string name="action_feedback">Feedback</string>
+	<string name="hint_title">Titel</string>
 	<string name="hint_description">Beschrijving</string>
-	<string name="empty_mysessions">Geen favoriete sessies</string>
-	<string name="wc_about">Over</string>
-	<string name="update_speakers_toast">Vernieuwde sprekers</string>
-	<string name="help_and_feedback">Feedback</string>
+	<string name="bug">Rapporteer een bug</string>
 	<string name="update_sessions_toast">Vernieuwde sessies</string>
+	<string name="help_and_feedback">Feedback</string>
 	<string name="schedule_to_be_announced">Tijdschema is nog niet aangekondigd</string>
 	<string name="speaker_to_be_announced">Sprekers zijn nog niet aangekondigd</string>
 	<string name="empty_mywordcamps">Nog geen WordCamps toegevoegd</string>
 	<string name="search_wc_hint">Zoek WordCamps</string>
 	<string name="update_overview_toast">Vernieuwd overzicht</string>
 	<string name="wc_location">Locatie</string>
+	<string name="wc_about">Over</string>
+	<string name="empty_mysessions">Geen favoriete sessies</string>
+	<string name="update_speakers_toast">Vernieuwde sprekers</string>
 	<string name="action_search">Zoek WordCamps</string>
 	<string name="action_refresh">Verversen</string>
 </resources>
