--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -1,40 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+Translation-Revision-Date: 2016-11-22 15:11:13+0000
+Plural-Forms: nplurals=3; plural=(n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < 20)) ? 1 : 2);
+Generator: GlotPress/2.4.0-alpha
+Language: ro
+-->
 <resources>
-	<string name="multiple_speakers">și alți %d</string>
 	<string name="and">și</string>
+	<string name="multiple_speakers">și alți %d</string>
 	<string name="feedback_url_not_available_toast">Acest WordCamp încă n-a publicat un URL pentru impresii</string>
 	<string name="action_wc_feedback">Impresii despre WordCamp</string>
-	<string name="about_description_fallback">Verifică situl web pentru mai multe informații</string>
 	<string name="add_to_calendar">Adaugă la calendar</string>
+	<string name="about_description_fallback">Verifică situl web pentru mai multe informații</string>
 	<string name="wc_date">Data</string>
-	<string name="visit_website">Vizitează situl</string>
 	<string name="action_navigate">Navighează</string>
+	<string name="visit_website">Vizitează situl</string>
 	<string name="my_wc_title">Favorite</string>
 	<string name="no_network_toast">Nicio rețea disponibilă</string>
 	<string name="empty_wordcamps">WordCamp-urile încă nesincronizate</string>
 	<string name="upcoming_wc_title">Următoare</string>
-	<string name="title_speakers">Vorbitori</string>
-	<string name="my_sessions_title">Sesiunile mele</string>
-	<string name="action_send">Trimite</string>
-	<string name="title_schedule">Planificare</string>
-	<string name="title_overview">Prezentare generală</string>
 	<string name="action_webversion">Versiune web</string>
+	<string name="title_overview">Prezentare generală</string>
+	<string name="title_schedule">Planificare</string>
+	<string name="action_send">Trimite</string>
+	<string name="my_sessions_title">Sesiunile mele</string>
+	<string name="title_speakers">Vorbitori</string>
 	<string name="title_sessions">Sesiuni</string>
-	<string name="hint_title">Titlu</string>
-	<string name="bug">Raportezi un defect?</string>
 	<string name="action_feedback">Impresii</string>
+	<string name="hint_title">Titlu</string>
 	<string name="hint_description">Descriere</string>
+	<string name="bug">Raportezi o eroare?</string>
 	<string name="update_sessions_toast">Sesiuni actualizate</string>
-	<string name="update_speakers_toast">Actualizare oratori</string>
-	<string name="update_overview_toast">Actualizare prezentare generală</string>
-	<string name="speaker_to_be_announced">Oratori de anunțat</string>
-	<string name="action_search">Caută WordCamp-uri</string>
-	<string name="schedule_to_be_announced">Program de anunțat</string>
-	<string name="empty_mywordcamps">Niciun WordCamp adăugat</string>
-	<string name="empty_mysessions">Nicio sesiune favorită</string>
-	<string name="wc_location">Locație</string>
-	<string name="search_wc_hint">Căutare WordCamp-uri</string>
 	<string name="help_and_feedback">Impresii</string>
+	<string name="schedule_to_be_announced">Program de anunțat</string>
+	<string name="speaker_to_be_announced">Oratori de anunțat</string>
+	<string name="empty_mywordcamps">Niciun WordCamp adăugat</string>
+	<string name="search_wc_hint">Căutare WordCamp-uri</string>
+	<string name="update_overview_toast">Actualizare prezentare generală</string>
+	<string name="wc_location">Locație</string>
 	<string name="wc_about">Despre</string>
-	<string name="action_refresh">Actualizare</string>
+	<string name="empty_mysessions">Nicio sesiune favorită</string>
+	<string name="update_speakers_toast">Actualizare oratori</string>
+	<string name="action_search">Caută WordCamp-uri</string>
+	<string name="action_refresh">Reîmprospătare</string>
 </resources>
